...
              {/* Logo */}
              <div className="mb-5 flex justify-center">
                <img className="h-20 max-w-full" src={logoSvg} alt="SpeleoDB" />
              </div>
              {/* Page title */}
              <h1 className="pt-8 text-2xl md:text-3xl font-bold bg-gradient-to-r from-slate-200/60 via-slate-200 to-slate-200/60 bg-clip-text text-transparent">
                Sign in to your account
              </h1>
            </div>

            {/* Form */}
            <div className="max-w-sm mx-auto">
              {/* Error message */}
...
